@@ -1,7 +1,7 @@
 <%args>
 	$username => undef
 	$password => undef
-	$debug => undef
+	$debug => 1
 	$no_prefs => undef
 </%args>
 <%init>
@@ -53,7 +53,6 @@
 		$data = $xml->XMLin($Tab::file_root."tmp/$epoch/TourneyData.xml");
 
 	}
-
 
 	#TOURNAMENT
 	my $download_site = $data->{TOURN}->{DOWNLOADSITE};
@@ -785,7 +784,6 @@
 			$panel_by_cat_id{$xml_panel->{ID}} = $panel;
 			$used_panels{$xml_panel->{ID}}++;
 
-
 			$panel->room($room);
 			$panel->flight($xml_panel->{FLIGHT});
 			$panel->cat_id($xml_panel->{ID});
@@ -798,6 +796,105 @@
 	foreach my $panel_id (keys %panel_by_cat_id) { 
 		next if $used_panels{$panel_id};
 		$panel_by_cat_id{$panel_id}->delete;
+	}
+
+	my %result_by_entry = ();
+	my %seed_set_by_event = ();
+
+	foreach my $event (@used_events) { 
+
+		foreach my $result_set ($event->result_sets) { 
+
+			next unless $result_set->bracket;
+
+			my $notfirst;
+
+			$seed_set_by_event{$event->id} = $result_set;
+
+			foreach my $result ($result_set->results) { 
+				$result_by_entry{$result->entry->id."-".$result->round->id} = $result;
+				$notfirst++;
+			}
+
+		}
+	}
+
+	my %used_results = ();
+
+	ELIMSEED:
+	foreach my $xml_elimseed (@{$data->{ELIMSEED}}) { 
+
+		my $entry_id = $xml_elimseed->{ENTRY};
+		next if $entry_id == "-99";
+
+		my $entry = $entry_by_id{$entry_id};
+		next unless $entry;
+
+		my $round_id = $xml_elimseed->{ROUND};
+		my $event_id = @{$xml_elimseed->{EVENT}}[0];
+
+		next unless $event_id && $round_id;
+
+		my $result = $result_by_entry{$entry_id."-".$round_id};
+		my $set = $seed_set_by_event{$event_id};
+
+		unless ($set) { 
+
+			$set = Tab::ResultSet->create({
+				tourn => $tourn->id,
+				event => $event_id,
+				bracket => 1,
+				label => "Bracket",
+				generated => $now
+			});
+
+			$seed_set_by_event{$event_id} = $set;
+		}
+
+		my $seed_done;
+
+		if ($result) { 
+
+			$used_results{$result->id}++;
+
+			foreach my $value ($result->values) { 
+
+				$value->delete unless $value->tag eq "Seed";
+
+				if ($value->tag eq "Seed") { 
+					$value->value($xml_elimseed->{SEED});
+					$value->update;
+					$seed_done++;
+				}
+
+			}
+
+		} else { 
+
+			$result = Tab::Result->create({
+				result_set => $set->id,
+				entry => $entry_id,
+				round => $round_id
+			});
+		}
+
+		unless ($seed_done) { 
+
+			Tab::ResultValue->create({
+				result => $result->id,
+				value => $xml_elimseed->{SEED},
+				priority => 1,
+				tag => "Seed",
+				sort_desc => 0,
+				no_sort => 0
+			});
+		}
+
+	}
+
+	foreach my $key (keys %result_by_entry) { 
+		next if $used_results{$result_by_entry{$key}->id};
+		$result_by_entry{$key}->delete;
 	}
 
 	my %ballot_by_id = ();
